# GateTools

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  MANIFEST.in  pyproject.toml  readme.md  readme_dev.md  setup.py  spatialResolution_StdDevDistribution_creator.py
.github/workflows/: main.yml
clustertools/: gam_gate_job_ccin2p3.slurm  gam_gate_split_and_run.py  gate_job_ccin2p3.job  gate_job_ccin2p3.slurm  gate_job_cluster.job  gate_job_idris.slurm  gate_local.job  gate_merge.py  gate_power_merge.sh  gate_split_and_run.py  mergeDosePerEnergyFile.py  mergeStatFile.py  mergeUncertaintyImage.py  opengate_job_ccin2p3.slurm  opengate_run.py  parserMacro.py
dataTest/: rtdose.dcm  tomoSPECT.dcm
gatetools/: __init__.py  affine_transform.py  bounding_box.py  dvh.py  gamma_index.py  gate_helpers.py  gauss_filter.py  geomMacroConverter_VirtualSegmentation.py  hausdorff.py  image_arithm.py  image_convert.py  image_crop.py  image_resize.py  image_statistics.py  image_to_dicom_rt_struct.py  image_uncertainty.py  logging_conf.py  merge_root.py  morpho_math.py  pbs_plan_file.py  pet_helpers.py  pet_helpers_uproot3.py  pet_helpers_with_debug.py  phsp_helpers.py  resample_dose.py  roi_utils.py  write_dicom.py
gatetools/clustertools/: computeElapsedTime.py  example_opengate_run.py  gate_job_ccin2p3.slurm  gate_job_idris.slurm  gate_power_merge.sh  gate_split_and_run.py  mergeStatFile.py  opengate_job_ccin2p3.slurm  opengate_power_merge.sh  opengate_run.py
gatetools/phsp/: __init__.py  phsp_helpers.py
gatetools/phsp/testphsp/: phsp.root
gatetools/testroi/: ct.mha  rtstruct.dcm
src/: .gitignore  __init__.py  __init__.py~  phsp.py  phsp.py~
src/phsp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
